# rust-inventory-manager

./: Cargo.toml  README.md
db/migrations/20211220122241_create_users_table/: up.sql
db/migrations/20211220125246_create_items_table/: up.sql
src/: diesel_sqlite.rs  main.rs  test.rs
